# nafta

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  lint.sh  linters.txt  load_environment.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-ci.yml
api/: __init__.py  main.py
api/client/: __init__.py  dataset.py  govapi.py  http.py  io.py
api/clientapi/: __init__.py  dataset.py  govapi.py  http.py  io.py
python/: main.py
python/api/: __init__.py
python/client/: __init__.py  govapi.py
