[project]
name = "Nafta"
version = "0.0.1"
authors = [
  { name="Juan Fox"},
]
description = "Python-based API that retrieves *gas prices in Argentina*, from official listings."
readme = "README.md"
requires-python = ">=3.10.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/juannfox/nafta"